# Energy-Languages

./: .gitattributes  .gitignore  LICENSE  README.md  compile_all.py  gen-input.sh  knucleotide-input25000000.txt  lshw  measure.py  regexredux-input5000000.txt  requirements.txt  sysinfo  sysinfo.sh  table.py
.github/workflows/: docker.yml  rapl.yml
Ada/: Ada.csv  xAda.csv
Ada/binary-trees/: Makefile  binarytrees.gnat-4.gnat
Ada/fannkuch-redux/: Makefile  fannkuchredux.gnat-3.gnat  output
Ada/fasta/: Makefile  fasta.gnat-5.gnat  output
Ada/k-nucleotide/: Makefile  knucleotide.gnat-2.gnat
Ada/mandelbrot/: Makefile  mandelbrot.gnat-3.gnat
Ada/n-body/: Makefile  nbody.gnat-2.gnat
Ada/pidigits/: Makefile  pidigits.gnat-2.gnat
Ada/regex-redux/: Makefile  regexredux.gnat-5.gnat
Ada/reverse-complement/: Makefile  output  revcomp.gnat-2.gnat
Ada/spectral-norm/: Makefile  spectralnorm.gnat-4.gnat
C/: C.csv  Makefile.defaults  xC.csv
C#/: README
C#/binary-trees/: Makefile
C#/chameneos-redux/: Makefile  chameneosredux.cs
C#/fannkuch-redux/: Makefile  fannkuchredux.cs
C#/fasta/: Makefile  fasta.csharpcore
C#/k-nucleotide/: Makefile  knucleotide.cs
C#/mandelbrot/: Makefile  mandelbrot.cs
C#/n-body/: Makefile
C#/pidigits/: Makefile
C#/regex-redux/: Makefile
C#/reverse-complement/: Makefile
C#/spectral-norm/: Makefile  spectralnorm.cs
C++/: C++.csv  Makefile.defaults  compile_all.py  xC++.csv
C++/binary-trees/: Makefile  binarytrees.gpp-9.c++
C++/binary-trees-closed/: Makefile  binarytrees.cpp
C++/chameneos-redux/: Makefile  chameneosredux.gpp-5.c++
C++/fannkuch-redux/: Makefile  fannkuchredux.cpp  fannkuchredux.gpp-5.gpp_run
C++/fasta/: Makefile  fasta.gpp-5.c++
C++/k-nucleotide/: Makefile  knucleotide.gpp-3.c++
C++/mandelbrot/: Makefile  mandelbrot.cpp
C++/n-body/: Makefile  nbody.cpp
C++/pidigits/: Makefile  pidigits.cpp
C++/regex-redux/: Makefile  regexredux.gpp-3.c++
C++/regex-redux-ctre/: CMakeLists.txt  Makefile  regexredux.cpp
C++/regex-redux-re2/: Makefile
C++/reverse-complement/: Makefile  revcomp.gpp-4.c++
C++/spectral-norm/: Makefile  spectralnorm.gpp-6.c++
C/binary-trees/: Makefile  binarytrees.c  out
C/chameneos-redux/: Makefile  chameneosredux.gcc-5.c
C/fannkuch-redux/: Makefile  fannkuchredux.gcc-5.c
C/fasta/: Makefile  fasta.gcc-2.c
C/k-nucleotide/: Makefile  knucleotide.c
C/mandelbrot/: Makefile  mandelbrot.gcc-6.c
C/n-body/: Makefile
C/pidigits/: Makefile  pidigits.c
C/regex-redux/: Makefile
C/reverse-complement/: Makefile  revcomp.c
C/spectral-norm/: Makefile  spectralnorm.c
CSharp/: CSharp.csv  xCSharp.csv
CSharp/binary-trees/: Makefile  Program.cs
CSharp/chameneos-redux/: Makefile
CSharp/fannkuch-redux/: Makefile
CSharp/fasta/: Makefile
CSharp/k-nucleotide/: Makefile
CSharp/mandelbrot/: Makefile
CSharp/n-body/: Makefile  Program.cs
CSharp/pidigits/: Makefile  pidigits.csharpcore-3.csharpcore
CSharp/regex-redux/: Makefile  Program.cs
CSharp/reverse-complement/: Makefile  revcomp.csharpcore-2.csharpcore
CSharp/spectral-norm/: Makefile
CSharp/thread-ring/: Makefile  Program.cs
Chapel/: Chapel.csv
Chapel/binary-trees/: Makefile  binarytrees.chpl
Chapel/chameneos-redux/: Makefile  chameneosredux.chpl
Chapel/fannkuch-redux/: Makefile  fannkuchredux.chapel
Chapel/fasta/: Makefile  fasta.chapel-2.chapel
Chapel/k-nucleotide/: Makefile
Chapel/mandelbrot/: Makefile  mandelbrot.chapel-2.chapel
Chapel/n-body/: Makefile  nbody.chapel
Chapel/pidigits/: Makefile
Chapel/regex-redux/: Makefile
Chapel/reverse-complement/: Makefile  revcomp.chapel
Chapel/spectral-norm/: Makefile  spectralnorm.chpl
Chapel/thread-ring/: Makefile  threadring.chapel
Dart/: Dart.csv  xDart.csv
Dart/binary-trees/: Makefile  binarytrees.dart
Dart/fannkuch-redux/: Makefile  fannkuchredux.dart-2.dart
Dart/fasta/: Makefile  fasta.dart
Dart/k-nucleotide/: Makefile  knucleotide.dart-2.dart
Dart/mandelbrot/: Makefile  mandelbrot.dart
Dart/n-body/: Makefile  nbody.dart-3.dart
Dart/pidigits/: Makefile  pidigits.dart
Dart/regex-redux/: Makefile  regexredux.dart-2.dart
Dart/reverse-complement/: Makefile  revcomp.dart-3.dart
Dart/spectral-norm/: Makefile  spectralnorm.dart
Erlang/: Erlang.csv
Erlang/binary-trees/: Makefile  binarytrees.hipe-2.hipe
Erlang/fannkuch-redux/: Makefile  fannkuchredux.hipe
Erlang/fasta/: Makefile  fasta.hipe-2.hipe
Erlang/k-nucleotide/: Makefile  knucleotide.hipe-3.hipe
Erlang/mandelbrot/: Makefile  mandelbrot.hipe-2.hipe
Erlang/n-body/: Makefile  (+1 more)
FSharp/: FSharp.csv  README
Fortran/: Fortran.csv
Go/: Go.csv
GraalVM/: Java.csv
Hack/: Hack.csv
Haskell/: Haskell.csv
JRuby/: JRuby.csv
Java/: Java.csv  Java.csv.old
Java-GraalVM/: GraalVM.csv  compile_all.py  install.sh
Java-N/: run.py
JavaScript/: JavaScript.csv
Julia/: Julia.mem  Julia_2020.csv
Lisp/: Lisp.csv  compile_all.py
Lua/: Lua.csv
OCaml/: OCaml.csv
PHP/: PHP.csv
Pascal/: Pascal.csv
Perl/: Perl.csv  compile_all.py
Python/: Python.csv
RAPL/: Makefile  main  main.c  rapl-read.c  rapl-read.cpp  rapl.c  rapl.h
Racket/: Racket.csv  compile_all.py
Ruby/: Ruby.csv
Rust/: Makefile.defaults  Rust.csv
Smalltalk/: Smalltalk.csv
Swift/: Swift.csv
TypeScript/: TypeScript.csv  package-lock.json  package.json
docker/: LangBench.Dockerfile  bench.sh  main.Dockerfile
scripts/: average_cpu_usage.py  boxplot.py  c-as-c++.py  docker-java-n.sh  idle.py  java-n.py  java_100.ipynb  measure.py  requirements.txt  table.py  time_v_energy.py  x-as-y.py
scripts/RAPL/: .clang-format  CMakeLists.txt  Makefile  README.md  rapl-read.cpp  rapl.cpp
scripts/RAPL/cmake/: checkRaplSupport.cmake  check_msr_dram.cpp  check_msr_open.cpp  check_msr_pkg.cpp  check_msr_power_units.cpp  check_msr_pp0.cpp  check_msr_pp1.cpp  check_msr_psys.cpp
scripts/RAPL/include/: cpu.hpp  msr.hpp  perf.hpp  rapl.hpp
scripts/RAPL/src/: cpu.cpp  idle.cpp  main.cpp  msr.cpp  perf.cpp  rapl.cpp
scripts/rapl/: CMakeLists.txt  __init__.py  main.cpp  rapl.py
(+2252 files in other folders)
